Adapted to recent OH version
Signed-off-by: gael@lhopital.org <gael@lhopital.org>