@@ -30,7 +30,7 @@ import ch.hsr.geohash.WGS84Point;
  *
  * @author Gaël L'hopital - Initial contribution and API
  */
-@Component(immediate = true, service = TransformationService.class, property = { "smarthome.transform=GEOHASH" })
+@Component(immediate = true, service = TransformationService.class, property = { "openhab.transform=GEOHASH" })
 @NonNullByDefault
 public class GeohashTransformationService implements TransformationService {
     private int DEFAULT_PRECISION = 6;
@@ -38,30 +38,28 @@ public class GeohashTransformationService implements TransformationService {
     @Override
     public @Nullable String transform(final String precision, final String coordinates) throws TransformationException {
         try {
-            PointType point = new PointType(coordinates);
+            PointType point = PointType.valueOf(coordinates);
             try {
                 int numcar = precision.isEmpty() ? DEFAULT_PRECISION : Integer.parseInt(precision);
                 if (numcar > 0 && numcar <= 12) {
                     return GeoHash.withCharacterPrecision(point.getLatitude().doubleValue(),
                             point.getLongitude().doubleValue(), numcar).toBase32();
                 } else {
-                    throw new TransformationException(
-                            String.format("Valid range for Precision is ]0,12] : '{}'", precision));
+                    throw new TransformationException("Valid range for Precision is [1,12]: '{}'".formatted(precision));
                 }
             } catch (NumberFormatException e) {
                 throw new TransformationException(
-                        String.format("The value '{}' is not valid precision level : {}", precision));
+                        "The value '{}' is not valid precision level: {}".formatted(precision));
             }
         } catch (IllegalArgumentException e) {
             try {
                 GeoHash hash = GeoHash.fromGeohashString(coordinates);
                 WGS84Point centerPoint = hash.getBoundingBox().getCenter();
-                PointType point = new PointType(new DecimalType(centerPoint.getLatitude()),
-                        new DecimalType(centerPoint.getLongitude()));
-                return point.toString();
+                return new PointType(new DecimalType(centerPoint.getLatitude()),
+                        new DecimalType(centerPoint.getLongitude())).toString();
             } catch (NullPointerException e2) {
-                throw new TransformationException(String
-                        .format("The value '{}' is not valid geohash nor a valid coordinate expression", coordinates));
+                throw new TransformationException(
+                        "The value '{}' is not valid geohash nor a valid coordinate expression".formatted(coordinates));
             }
         }
     }
